k8s/quiz-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-service
  template:
    metadata:
      labels:
        app: quiz-service
    spec:
      serviceAccountName: quiz-service-sa
      containers:
        - name: quiz-service
          image: noureddine078/tcf-quiz-service:1
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: quiz-service
spec:
  selector:
    app: quiz-service
  ports:
    - name: http
      port: 5002
      targetPort: 5002
  type: ClusterIP
